tests/analyze/list-spread-non-list/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `list int`, but found `int`.
> 1 | def bad = [1, ...2]
                       ^

